--- a/micro-frontend-demo/package.json
+++ b/micro-frontend-demo/package.json
@@ -2,6 +2,7 @@
   "name": "micro-frontend-demo",
   "version": "0.0.0",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -10,6 +11,9 @@
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
+  "resolutions": {
+    "webpack": "^5.0.0"
+  },
   "dependencies": {
     "@angular-architects/module-federation": "^14.3.12",
     "@angular/animations": "^14.2.10",
