--- a/micro-frontend-demo/package.json
+++ b/micro-frontend-demo/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^14.2.10",
     "@angular/platform-browser-dynamic": "^14.2.10",
     "@angular/router": "^14.2.10",
+    "ngx-mfe": "^3.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "^14.2.10",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "bootstrap": "^5.2.2",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
