--- a/micro-frontend-demo/package.json
+++ b/micro-frontend-demo/package.json
@@ -38,6 +38,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^14.2.0",
     "ngx-build-plus": "^14.0.0",
     "typescript": "~4.6.2"
   }
