added web component and module federation tools, not working yet

--- a/micro-frontend-demo/package.json
+++ b/micro-frontend-demo/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^14.3.12",
+    "@angular-architects/module-federation-tools": "^14.3.14",
     "@angular/animations": "^14.2.10",
     "@angular/common": "^14.2.10",
     "@angular/compiler": "^14.2.10",
